<resources>
    <string name="a_stronger_health_to_you">A Stronger,\nHealthier You</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="achieve_a_preset_score">Achieve a preset score.</string>
    <string name="activate">Activate</string>
    <string name="activate_sole_exclusive">Activate SOLE Exclusive</string>
    <string name="active_hours">Active Hours</string>
    <string name="active_time">Active Time</string>
    <string name="activity">Activity</string>
    <string name="activity_all">All</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_elliptical">Elliptical</string>
    <string name="activity_may_already_exist">Activity may already exist</string>
    <string name="activity_others">Others</string>
    <string name="activity_overview">Activity Overview</string>
    <string name="activity_rowing">Rowing</string>
    <string name="activity_running">Running</string>
    <string name="activity_stepper">Stepper</string>
    <string name="activity_strength">Strength</string>
    <string name="activity_stretch">Stretch</string>
    <string name="activity_walking">Walking</string>
    <string name="add_device">Add Device</string>
    <string name="add_goal">Add Goal</string>
    <string name="all_events">All Events</string>
    <string name="all_time">All Time</string>
    <string name="already_challenge_member">Already Challenge member</string>
    <string name="amount_error">Max value for this target is</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_activity">Any Activity</string>
    <string name="any_device">Any Device</string>
    <string name="any_level">Any Level</string>
    <string name="app_name">Sole+</string>
    <string name="app_tour">App Tour</string>
    <string name="app_update_dialog_msg">An updated version of the app is available. Please proceed to the App Store to update.</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_filter">Apply %1$s Filter</string>
    <string name="apply_filter_count">Apply %d Filter</string>
    <string name="apply_filters_count">Apply %d Filters</string>
    <string name="april">April</string>
    <string name="archive">Archive</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="are_you_sure_msg">This action cannot be undone.</string>
    <string name="ascent">Ascent</string>
    <string name="ask_log_out">Do you want to log out?</string>
    <string name="august">August</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="autofill">Autofill</string>
    <string name="avg_cadence">Avg Cadence</string>
    <string name="avg_daily">Avg Daily</string>
    <string name="avg_incline">Avg Incline</string>
    <string name="avg_km_h">Avg km/h</string>
    <string name="avg_load">Avg Load</string>
    <string name="avg_mets">Avg METs</string>
    <string name="avg_mi_h">Avg mi/h</string>
    <string name="avg_min_km">Avg min / km</string>
    <string name="avg_min_mi">Avg min / mi</string>
    <string name="avg_monthly">Avg Monthly</string>
    <string name="avg_output">Avg Output</string>
    <string name="avg_pace">Avg Pace</string>
    <string name="avg_rpm">Avg rpm</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="avg_spm">Avg spm</string>
    <string name="avg_tension_time">Avg Tension Time</string>
    <string name="avg_weekly">Avg Weekly</string>
    <string name="back">Back</string>
    <string name="begin_race">Begin Race</string>
    <string name="best_1000m_climb">Best 1000m Climb</string>
    <string name="best_1000m_climb_desc">Your fastest time for a 1000m climb</string>
    <string name="best_1000m_row">Best 1000m Row</string>
    <string name="best_1000m_row_desc">Your fastest time for a 1000m row</string>
    <string name="best_100m_climb">Best 100m Climb</string>
    <string name="best_100m_climb_desc">Your fastest time for a 100m climb</string>
    <string name="best_10k_row">Best 10K Row</string>
    <string name="best_10k_row_desc">Your fastest time for a 10,000m row</string>
    <string name="best_10k_run">Best 10K Run</string>
    <string name="best_10k_run_desc">Your fastest time for a 10K run</string>
    <string name="best_120min_bike_power">Best 120-Min Bike Power</string>
    <string name="best_120min_bike_power_desc">Your highest average power output over 120 minutes on bike</string>
    <string name="best_20k_ride">Best 20K Ride</string>
    <string name="best_20k_ride_desc">Your fastest time for a 20K ride</string>
    <string name="best_250m_climb">Best 250m Climb</string>
    <string name="best_250m_climb_desc">Your fastest time for a 250m climb</string>
    <string name="best_2k_row">Best 2K Row</string>
    <string name="best_2k_row_desc">Your fastest time for a 2000m row</string>
    <string name="best_30_minute_glide">Best 30-Minute Glide</string>
    <string name="best_30_minute_glide_desc">Your highest average power output over 30 minutes</string>
    <string name="best_30min_bike_power">Best 30-Min Bike Power</string>
    <string name="best_30min_bike_power_desc">Your highest average power output over 30 minutes on bike</string>
    <string name="best_4000m_row">Best 4000m Row</string>
    <string name="best_4000m_row_desc">Your fastest time for a 4000m row</string>
    <string name="best_40k_ride">Best 40K Ride</string>
    <string name="best_40k_ride_desc">Your fastest time for a 40K ride</string>
    <string name="best_500m_climb">Best 500m Climb</string>
    <string name="best_500m_climb_desc">Your fastest time for a 500m climb</string>
    <string name="best_5k_row">Best 5K Row</string>
    <string name="best_5k_row_desc">Your fastest time for a 5000m row</string>
    <string name="best_5k_run">Best 5K Run</string>
    <string name="best_5k_run_desc">Your fastest time for a 5K run</string>
    <string name="best_60min_bike_power">Best 60-Min Bike Power</string>
    <string name="best_60min_bike_power_desc">Your highest average power output over 60 minutes on bike</string>
    <string name="best_8000m_row">Best 8000m Row</string>
    <string name="best_8000m_row_desc">Your fastest time for a 8000m row</string>
    <string name="best_90_minute_glide">Best 90-Minute Glide</string>
    <string name="best_90_minute_glide_desc">Your highest average power output over 90 minutes</string>
    <string name="best_90min_bike_power">Best 90-Min Bike Power</string>
    <string name="best_90min_bike_power_desc">Your highest average power output over 90 minutes on bike</string>
    <string name="best_century_ride">Best Century Ride</string>
    <string name="best_century_ride_desc">Your fastest time for a 100 mi ride</string>
    <string name="best_half_century_ride">Best Half-Century Ride</string>
    <string name="best_half_century_ride_desc">Your fastest time for a 50 mi ride</string>
    <string name="best_half_marathon_row">Best Half-Marathon Row</string>
    <string name="best_half_marathon_row_desc">Your fastest time for a 21,000m row</string>
    <string name="best_half_marathon_run">Best Half-Marathon Run</string>
    <string name="best_half_marathon_run_desc">Your fastest time for a 21K run</string>
    <string name="best_marathon_run">Best Marathon Run</string>
    <string name="best_marathon_run_desc">Your fastest time for a 42K run</string>
    <string name="best_one_hour_glide">Best One-Hour Glide</string>
    <string name="best_one_hour_glide_desc">Your highest average power output over 60 minutes</string>
    <string name="best_two_hour_glide">Best Two-Hour Glide</string>
    <string name="best_two_hour_glide_desc">Your highest average power output over 120 minutes</string>
    <string name="bike">Bike</string>
    <string name="bike_activity">Bike Activity</string>
    <string name="birthday">Birthday</string>
    <string name="ble_busy_now_msg">Bluetooth error. Please turn off then turn on the system bluetooth again.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="boxing">Boxing</string>
    <string name="bpm">bpm</string>
    <string name="browse_all_events">Browse All Events</string>
    <string name="browse_programs">Browse Programs</string>
    <string name="cadence">Cadence</string>
    <string name="calendar_today">Today</string>
    <string name="calendar_tomorrow">Tomorrow</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="height_cm">Height,CM</string>
    <string name="male">Male</string>
    <string name="nav_activity">Activity</string>
    <string name="nav_classes">Classes</string>
    <string name="nav_club">Club</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="select_icon">Select Icon</string>
    <string name="username">Username</string>
    <string name="weight">Weight</string>
    <string name="weight_kg">Weight,KG</string>
</resources>