<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_edit_profile_0"
    android:background="@color/colorBackground_canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/statusBarHeight"
        android:background="@color/colorBackground_canvas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout7"
        android:background="@drawable/bg_round_top_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusBarHeight">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20">
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorGlobal_accent"
                android:id="@+id/cancel"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:fontFamily="@font/inter_semibold_600"/>
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorLabel_label1"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold_600"
                android:textAlignment="center"/>
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorGlobal_accent"
                android:id="@+id/save"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:fontFamily="@font/inter_semibold_600"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20">
                <TextView
                    android:textColor="@color/colorLabel_label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:fontFamily="@font/inter_bold_700"
                    android:paddingStart="@dimen/padding_8"
                    android:letterSpacing="0.1"/>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_corner32_outline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_20">
                    <EditText
                        android:id="@+id/name"
                        android:background="@null"
                        android:padding="@dimen/padding_16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:ems="10"
                        android:maxLength="50"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20">
                <TextView
                    android:textColor="@color/colorLabel_label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/birthday"
                    android:textAllCaps="true"
                    android:fontFamily="@font/inter_bold_700"
                    android:paddingStart="@dimen/padding_8"
                    android:letterSpacing="0.1"/>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_corner32_outline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_20">
                    <TextView
                        android:textSize="@dimen/text_size_17"
                        android:textColor="@color/colorLabel_label1"
                        android:id="@+id/birthday"
                        android:padding="@dimen/padding_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium_500"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20">
                <TextView
                    android:textColor="@color/colorLabel_label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/gender"
                    android:textAllCaps="true"
                    android:fontFamily="@font/inter_bold_700"
                    android:paddingStart="@dimen/padding_8"
                    android:letterSpacing="0.1"/>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_corner32_raised"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="@dimen/padding_8"
                    android:paddingEnd="@dimen/padding_8">
                    <TextView
                        android:textColor="@color/colorGlobal_accent"
                        android:gravity="center"
                        android:id="@+id/male"
                        android:background="@drawable/bg_corner32_white"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/male"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_semibold_600"/>
                    <TextView
                        android:textColor="@color/colorLabel_label3"
                        android:gravity="center"
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/female"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_semibold_600"/>
                    <TextView
                        android:textColor="@color/colorLabel_label3"
                        android:gravity="center"
                        android:id="@+id/other"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/other"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_semibold_600"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_20"
                        android:layout_marginEnd="@dimen/margin_8">
                        <TextView
                            android:textColor="@color/colorLabel_label3"
                            android:id="@+id/title_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_20"
                            android:text="@string/height_cm"
                            android:textAllCaps="true"
                            android:fontFamily="@font/inter_bold_700"
                            android:paddingStart="@dimen/padding_8"
                            android:letterSpacing="0.1"/>
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@drawable/bg_corner32_outline"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginBottom="@dimen/margin_20">
                            <EditText
                                android:id="@+id/height"
                                android:background="@null"
                                android:padding="@dimen/padding_16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/height"
                                android:ems="10"
                                android:layout_weight="1"
                                android:inputType="numberDecimal"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_20">
                        <TextView
                            android:textColor="@color/colorLabel_label3"
                            android:id="@+id/title_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_20"
                            android:text="@string/weight_kg"
                            android:textAllCaps="true"
                            android:fontFamily="@font/inter_bold_700"
                            android:paddingStart="@dimen/padding_8"
                            android:letterSpacing="0.1"/>
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@drawable/bg_corner32_outline"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginBottom="@dimen/margin_20">
                            <EditText
                                android:id="@+id/weight"
                                android:background="@null"
                                android:padding="@dimen/padding_16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/weight"
                                android:ems="10"
                                android:layout_weight="1"
                                android:inputType="numberDecimal"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
