<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_select_icon_0"
    android:background="@color/colorBackground_canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/statusBarHeight"
        android:background="@color/colorBackground_canvas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout7"
        android:background="@drawable/bg_round_top_white"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_total_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusBarHeight">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorGlobal_accent"
                android:id="@+id/cancel"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:fontFamily="@font/inter_semibold_600"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorLabel_label1"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_icon"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold_600"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorGlobal_accent"
                android:id="@+id/reset"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:fontFamily="@font/inter_semibold_600"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/LL_done"
            android:background="@drawable/bg_corner32_accent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/colorGlobal_white"
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/apply"
                android:fontFamily="@font/inter_semibold_600"
                android:paddingStart="@dimen/padding_36"
                android:paddingEnd="@dimen/padding_36"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"/>
</androidx.constraintlayout.widget.ConstraintLayout>
